Native/Test/KL/issue-424.out
issue-424.kl:3:3: error: code is unreachable
