Native/Test/KL/issue-424.kl
function Scalar foo() {
  return 3.14;
  Scalar a = 2.71;
  return a;
}

operator entry() {
  report foo();
}
